--- a/popup.html
+++ b/popup.html
@@ -1,19 +1,56 @@
-<style>
-input {
-    height: 20px;
-    font-size: 14px;
-    padding: 4px 6px;
-    border: 1px solid #cccccc;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.75);
-    border-radius: 4px;
-}
-
-</style>
-<input type="text" id="site" />
-
-<a href="#" id="highend">highend</a>
-<a href="#" id="touch">touch</a>
-<a href="#" id="smart">smart</a>
-<a href="#" id="feature">feature</a>
-
-<script src="popup.js" type="text/javascript"></script>
+<html>
+<head>
+    <style>
+    .pure-g-r > div {
+        box-sizing: border-box;
+        padding: 10px;
+    }
+    .pure-button {
+        margin: 5px;
+    }
+    </style>
+    <link rel="stylesheet" href="pure-min.css">
+</head>
+<body>
+    <div class="pure-g-r">
+        <div class="pure-u-1">
+            <form class="pure-form pure-form-aligned">
+                <fieldset>
+                    <div class="pure-control-group">
+                        <label for="site">Site</label>
+                        <input type="text" id="site" />
+                    </div>
+                    <div class="pure-control-group">
+                        <label for="highend" class="pure-checkbox">
+                            <input id="highend" class="checkbox" type="checkbox" value="highend">
+                            highend
+                        </label>
+                    </div>
+                    <div class="pure-control-group">
+                        <label for="touch" class="pure-checkbox">
+                            <input id="touch" class="checkbox" type="checkbox" value="touch">
+                            touch
+                        </label>
+                    </div>
+                    <div class="pure-control-group">
+                        <label for="smart" class="pure-checkbox">
+                            <input id="smart" class="checkbox" type="checkbox" value="smart">
+                            smart
+                        </label>
+                    </div>
+                    <div class="pure-control-group">
+                        <label for="feature" class="pure-checkbox">
+                            <input id="feature" class="checkbox" type="checkbox" value="feature">
+                            feature
+                        </label>
+                    </div>
+                    <div class="pure-controls">
+                        <button type="submit" id="submit" class="pure-button pure-button-primary">Submit</button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+    <script src="popup.js" type="text/javascript"></script>
+</body>
+</html>
